able to show popular products on home page